# tsis_umb_data_science

./: .env.example  .gitignore  Excel Script  README.md  build.spec  check_airports.py  check_cols.py  check_dependencies.py  check_flights_data.py  check_flights_schema.py  check_routes.py  check_schema.py  check_sectors_schema.py  circular_006_content.txt  config.yaml  debug_ingest.py  debug_predictive.py  debug_regions.py  debug_reset.py  debug_routes.py  debug_sector_creation.py  debug_sectors.py  describe_flights.py  extract_pdf.py  fix_db_schema.py  init_sectors_db.py  inspect_db.py  mkdocs.yml  pyproject.toml  readme  reporte.txt  repro_duckdb.py  repro_duckdb_drop.py  repro_duckdb_fix.py  repro_duckdb_peek.py  repro_live.py  reproduce_issue.py  requirements.txt  run.py  test_alter.py  (+16 more)
docs/: Makefile  application.md  architecture.md  codebase_guide.md  conf.py  domain.md  frontend.md  index.md  infrastructure.md  project_blueprints.md  reference.md  requirements.md  results_analysis.md  tech_manual.md  technical_glossary.md  theoretical_basis.md  user_manual.md
pdf_references/: Base de Datos Centros de Instrucción 2024 a 2025 Primer Semestre.xlsx  Base de Datos Servicios Aeroportuarios Noviembre 2025.xlsx  Registro Activos Informacion Aerocivil 2025.xlsx
resultados/: data.csv  estadisticas_scv_por_fecha.csv  reporte_diario.xlsx  reporte_por_nivel.xlsx  tabla_scv_fecha_hora.csv  tabla_scv_fecha_hora.html  tabla_scv_fecha_hora.xlsx  tabla_scv_fecha_hora_parcial.xlsx
scripts/: airport_data_loader.py  handle_outliers.py
src/: main.py
tests/: conftest.py  (+6 more)
(+324 files in other folders)
